[package]
name = "textfsm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "textfsm"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"
[dependencies]
lazy_static = "1.4.0"
regex = "1.7.2"
thiserror = "1.0.40"
either = "1.8.1"
